# pypsgemu

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  setup.py
.claude/: settings.local.json
docs/: api_reference.md  user_guide.md
docs/.optimization/: tick_optimization_detailed_proposal.md
docs/specification/: ay-3-8910-detailed-design-specification.md  ay-3-8910-requirements-define.md  ay-3-8910-requirements-specification.md  ay-3-8910-software-architecture-specification.md  device_if_api_requirements.md
examples/: audio_output.py  basic_usage.py  register_control.py
pypsgemu/: __init__.py  cli.py  gui.py
pypsgemu/api/: __init__.py  audio_device.py  device.py  protocols.py  system_bus.py
pypsgemu/audio/: __init__.py  advanced_pipeline.py  buffer.py  driver.py  high_quality_pipeline.py  performance_optimization.py  sample_generator.py
pypsgemu/core/: __init__.py  ay38910.py  device_config.py  envelope_generator.py  mixer.py  noise_generator.py  tone_generator.py  types.py
pypsgemu/debug/: __init__.py  engine.py  envelope_viewer.py  register_viewer.py  ui.py  visualizer.py  waveform_viewer.py
pypsgemu/utils/: __init__.py  lfsr.py  state_manager.py  volume_table.py
tests/: __init__.py
tests/integration/: __init__.py
tests/unit/: __init__.py
